--- a/web/css/site.css
+++ b/web/css/site.css
@@ -113,3 +113,41 @@ a.desc:after {
 .nav > li > form > button.logout:focus {
     outline: none;
 }
+
+.word {
+    padding: 5px;
+    border: 1px solid green;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.suggestion{
+    width: 100%;
+    height: 50px;
+    border: 1px solid green;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.random-words{
+
+    width: 100%;
+    height: 50px;
+    border: 1px dotted gray;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+#gameResultWindow{
+    display: none;
+    width: 700px;
+    height: 400px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -200px 0 0 -350px;
+    background: white;
+    border: 1px solid black;
+    border-radius: 20px ;
+    padding: 20px;
+}
